name:                tps-report
version:             0.0.0.0
synopsis:            TPS report
description:         Monthly activity report automation.
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
-- copyright:           2016 Eric Rochester
category:            Utility
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Tps.Actions.Default
                     , Tps.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , errors
                     , lens
                     , text
                     , text-format
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tps-report
  main-is:             Main.hs
  other-modules:       Actions
                     , Opts
                     , Types
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                     , tps-report
                     , errors
                     , text
                     , optparse-applicative
                     , errors
  hs-source-dirs:      app
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

test-suite tps-report-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  other-modules:         Tps.TypesSpec
  build-depends:         base
                       , tps-report
                       , errors
                       , lens
                       , text
                       , QuickCheck
                       , smallcheck
                       , hspec
  default-language:    Haskell2010

benchmark tps-report-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
                       -rtsopts
  hs-source-dirs:      bench
  main-is:             Bench.hs
  -- other-modules:         
  build-depends:         base
                       , tps-report
                       , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/tps-report
